--- a/index.ipynb
+++ b/index.ipynb
@@ -162,8 +162,7 @@
     }
    ],
    "source": [
-    "\"art vandelay\" # 'Art Vandelay'\n",
-    ".upper()"
+    "\"art vandelay\" # 'Art Vandelay;"
    ]
   },
   {
