--- a/index.ipynb
+++ b/index.ipynb
@@ -163,7 +163,7 @@
    ],
    "source": [
     "\"art vandelay\" # 'Art Vandelay'\n",
-    "'art vandel'.title()"
+    "art vandelay\".title()"
    ]
   },
   {
