--- a/index.ipynb
+++ b/index.ipynb
@@ -164,8 +164,8 @@
     }
    ],
    "source": [
-    "name =\"art vandelay\" # 'Art Vandelay'\n",
-    "\"art vandelay\".title()"
+    "name=\"art vandelay\" # 'Art Vandelay'\n",
+    "name.title()"
    ]
   },
   {
